--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="Axit-nav"
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#Axit"
           aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -37,7 +37,7 @@
         </button>
         <a class="navbar-brand" href="#">ِAX<span>IT</span></a>
       </div>
-      <div class="collapse navbar-collapse" id="Axit-nav">
+      <div class="collapse navbar-collapse" id="Axit">
         <ul class="nav navbar-nav navbar-right text-capit">
           <li><a href="#">features</a></li>
           <li><a href="#">about</a></li>
